--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,15 @@
-.venv
-__pycache__
 node_modules
 package-lock.json
+
+.venv/
+
+*.pyc
+__pycache__/
+
+instance/
+
+.pytest_cache/
+.coverage
+htmlcov/
+
+*.egg-info/
